Tiger_frontend/project1_test_code_example/tests/correct/function-call-params-expr.tiger
main let
    function print ( t:int, m:int) begin
        printi(t);
        printi(m);
    end;
in begin
    print(3,3+1);
    print(4,4-2);
    print(5,5*3);
    print(6,8/4);
            
    print(3,3+1);
    print(4,4-2);
    print(5,5*3);
    print(6,12/4);
end
