Tiger_frontend/project1_test_code_example/tests/errors/function-call-less-params.tiger
main let
        function print ( t:int, m:int) begin
                printi(t);
                printi(m);
        end;
in begin
        print(3);
end
